5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1753_3093.log
== TEST (2019-05-16 18:19:16) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:48) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:49) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.205118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3093/main.py", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:51) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.209213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3093/main.py", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:51) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:51) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.326187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3093/main.py", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:52) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.454033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3093/main.py", line 1, in <module>
    ponto=int(input("digite a letra: "))
ValueError: invalid literal for int() with base 10: 'v'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:55) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:57) 
-- CODE:
ponto=int(input("digite a letra: "))
if(v):
	print(3)
elif(e):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:23:21) 
-- CODE:
ponto=int(input("digite a letra: "))
while(x==0)
	if(v):
		print(3)
	elif(e):
		print(1)
	else:
		print(0)
-- ERROR:
File "XXXX", line 2
    while(x==0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:24:05) 
-- CODE:
ponto=int(input("digite a letra: "))
while(ponto==x)

	if(v):
		print(3)
	elif(e):
		print(1)
	else:
		print(0)
-- ERROR:
File "XXXX", line 2
    while(ponto==x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:07) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto==x)
	soma=soma+ponto
	print=soma

-- ERROR:
File "XXXX", line 5
    while(ponto==x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:17) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto==x)
	soma=soma+ponto
	print(soma)

-- ERROR:
File "XXXX", line 5
    while(ponto==x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:21) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto==x)
	soma=soma+ponto
print(soma)

-- ERROR:
File "XXXX", line 5
    while(ponto==x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:43) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto!=x)
	soma=soma+ponto
print(soma)

-- ERROR:
File "XXXX", line 5
    while(ponto!=x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:44) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto!=x)
	soma=soma+ponto
print(soma)

-- ERROR:
File "XXXX", line 5
    while(ponto!=x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:52) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto!=x):
	soma=soma+ponto
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:26) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto!=x):
	soma=soma+ponto
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:31) 
-- CODE:
ponto=int(input("digite a letra: "))
soma==0
v=3
e=1
while(ponto!=x):
	soma=soma+ponto
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:20) 
-- CODE:
ponto=int(input("digite a letra: "))
soma=0
v=3
e=1
while(ponto!=x):
	soma=soma+ponto
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:54) 
-- CODE:
ponto=int(input("digite a letra: "))
soma=0

while(ponto!=x):
	soma=soma+ponto
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ponto=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:34:48) 
-- CODE:
n=int(input("digite a letra: "))
soma=0

while(ponto!=x):
	soma=soma+n
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:37:36) 
-- CODE:
n=input("digite a letra: ")
soma=0

while(ponto!=x):
	soma=soma+n
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(ponto!=x):
NameError: name 'ponto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:04) 
-- CODE:
n=input("digite a letra: ")
soma=0
e=1
v=3
while(ponto!=x):
	soma=soma+n
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(ponto!=x):
NameError: name 'ponto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:38) 
-- CODE:
n=input("digite a letra: ")
soma=0
e=1
v=3
while(ponto!=x):
	soma=soma+v+e
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(ponto!=x):
NameError: name 'ponto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:52) 
-- CODE:
n=input("digite a letra: ")
soma=0
e=1
v=3
while(n!=x):
	soma=soma+v+e
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:44:56) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n!=x):
	soma=soma+v+e
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:34) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n!=x):
	soma=v+e
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:55) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n==x):
	soma=v+e
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n==x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:00) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n!=x):
	soma=v+e
print(soma)Darlon

-- ERROR:
File "XXXX", line 7
    print(soma)Darlon
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:26) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n!=x):
	soma=v+e
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:40) 
-- CODE:
n=input("digite a letra: ")
soma= 0
e= 1
v= 3
while(n!=x):
	soma=v+e
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(n!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
